LESS ---- Resolved issue with overflow() mixin outputting duplicate rules
Base
----
Removed $clone function from base

DOM
---
Added node $clone function to clone nodes
Bug fixes to $append, $insertBefore, $after, $insertAfter, $wrapInner, $position and $eq
Renamed $indexOf to $index

--- a/public/assets/css/core/mixins.less
+++ b/public/assets/css/core/mixins.less
@@ -1940,10 +1940,10 @@
 .cursor (@value: pointer) {
 	cursor: @value;
 }
-.overflow (@value) {
+.overflow (@value) when not (@value = x), (@value = y) {
 	overflow: @value;
 }
-.overflow (@x; @y) {
+.overflow (@x; @y) when not (@value = x), (@value = y) {
 	overflow-x: @x;
 	overflow-y: @y;
 }
